--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,7 +3,21 @@
     padding: 0;
     box-sizing: border-box;
 }
+h1,
+h2,
+h3 {
+    color: rgb(54,54,54);
+}
+body {
+    font-family: 'Lato', sans-serif;
+}
+h3,
+h4 {
+    font-weight: 400;
+    color: rgb(100, 100, 100)
+}
 
-@import './player.scss';
-@import './song.scss';
-@import './library'
+
+@import './player';
+@import './song';
+@import './library';
